--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "inquirer": "8.2.5",
+    "prisma": "^6.3.1",
     "serialize-error": "^4.1.0",
     "tgrid": "^1.0.2",
     "tstl": "^3.0.0",
